--- a/SisMaper/Views/ViewVendas.xaml
+++ b/SisMaper/Views/ViewVendas.xaml
@@ -196,23 +196,9 @@
                         Style="{DynamicResource TextBox.Search}"
                         Text="{Binding TextoFiltro, Delay=300, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         Height="35"
-                        VerticalAlignment="Top">
-                        <TextBox.ToolTip>
-                            <StackPanel>
-                                <TextBlock
-                                    FontWeight="Bold"
-                                    Foreground="{DynamicResource MahApps.Brushes.Accent}"
-                                    Text="Filtro Avançado:" />
-                                <TextBlock>
-                                    <Run
-                                        Text="Insira o nome do Cliente para buscar" />
-                                </TextBlock>
-                                <TextBlock>
-                                    <Run
-                                        Text="ou digite o número do pedido" />
-                                </TextBlock>
-                            </StackPanel>
-                        </TextBox.ToolTip>
+                        VerticalAlignment="Top"
+                        templates:HelperPopupToolTip.HelpHeader="Filtro Avançado"
+                        templates:HelperPopupToolTip.HelpContent="Filtrar os Pedidos por Nome do Cliente ou Número do Pedido.">
                     </TextBox>
                 </Grid>
             </Fluent:RibbonGroupBox>
